--- a/main-style.css
+++ b/main-style.css
@@ -1,12 +1,19 @@
+html {
+	font-size: 16px;
+}
+
 body {
 	background-color: #f9f9f9;
 	margin: 0;
+	font-family: "Open Sans";
 }
 
 .wrapper {
-	max-width: 1060px;
+	background-color: #fff;
+	max-width: 966px;
 	margin: 0 auto;
 	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
+	padding: 0 3rem;
 }
 
 h1 {
@@ -20,16 +27,23 @@ nav.main-nav {
 	background-image: -o-linear-gradient(bottom, #444343 0%, #5e5e5e 100%);
 	background-image: linear-gradient(to top, #444343 0%, #5e5e5e 100%);
 	font-size: 15px;
-	font-family: "Open Sans";
+	height: 2.5rem;
 }
 
 nav.main-nav ul {
 	list-style: none;
+	padding: 0;
 }
 
 nav.main-nav ul li {
 	display: inline-block;
-	padding: 1rem auto;
+	height: 2.5rem;
+}
+
+nav.main-nav ul li a {
+	padding: .5rem 4rem .5rem 1.5rem;
+	margin: auto 0;
+
 }
 
 nav.main-nav ul li.active {
@@ -37,7 +51,6 @@ nav.main-nav ul li.active {
 	border-right: 1px solid #838383;
 	background-color: #ffffff;
 	background-image: linear-gradient(to top, #2e2e2e 0%, #4a4a4a 100%);
-	padding: 0 auto;
 }
 
 p.link a {
@@ -49,10 +62,57 @@ p.link a:hover {
 	color: gray;
 }
 
-nav.sidebar-nav ul {
-	list-style: none;
-}
 section.sidebar {
 	height: 600px;
-	width: 200px;
+	width: 240px;
+	max-width: 28%;
+	float: left;
+}
+section.main-content {
+max-width: 67%;
+float: right;
+}
+
+nav.sidebar-nav ul {
+	list-style: none;
+	padding: 0;
+}
+
+.sidebar-nav ul {
+	border: 1px solid #c8c8c8;
+}
+
+.sidebar-nav ul li {
+	padding: 1rem 7rem 1rem 1.4rem;
+	border-bottom:1px solid #c8c8c8  
+}
+
+.sidebar-nav ul li:last-child {
+	border: none;
+}
+
+.sidebar-nav ul li.active {
+	background-color: #f9f9f9;
+	color: #2c2c2c;
+	padding: 1rem 6rem 1rem 2.4rem;
+	font-weight: bold;
+}
+section.main-content img {
+	float: right;
+}
+
+footer {
+	clear: both;
+	height: 2.5rem;
+	background-color: #e1e1e1;
+	background-color: #ffffff;
+	background-image: linear-gradient(to top, #e1e1e1 0%, #e1e1e1 100%);
+}
+nav.footer-nav ul li {
+	display: inline-block;
+	padding: 1rem 0;
+}
+li.copyright {
+	float: right;
+	padding: 1rem;
 }
