--- a/main-style.css
+++ b/main-style.css
@@ -1,3 +1,8 @@
+* {
+	padding: 0;
+	margin: 0;
+}
+
 html {
 	font-size: 16px;
 }
@@ -5,7 +10,7 @@ html {
 body {
 	background-color: #f9f9f9;
 	margin: 0;
-	font-family: "Open Sans";
+	font-family: "Open Sans" sans-serif;
 }
 
 .wrapper {
@@ -22,55 +27,51 @@ h1 {
 }
 
 nav.main-nav {
-	background-color: #ffffff;
+	background-color: #fff;
 	background-image: -webkit-linear-gradient(bottom, #444343 0%, #5e5e5e 100%);
 	background-image: -o-linear-gradient(bottom, #444343 0%, #5e5e5e 100%);
 	background-image: linear-gradient(to top, #444343 0%, #5e5e5e 100%);
-	font-size: 15px;
-	height: 2.5rem;
 }
 
 nav.main-nav ul {
 	list-style: none;
 	padding: 0;
+	font-size: 0;
 }
 
 nav.main-nav ul li {
 	display: inline-block;
-	height: 2.5rem;
+  border-right-width: 1px;
+  border-right-style: solid;
+  border-image: linear-gradient(to top, #444343, #5e5e5e) 0 100%;
+  font-size: 1rem;
+  border-left-width: 1px;
+  border-left-style: solid;
 }
 
 nav.main-nav ul li a {
 	padding: .5rem 4rem .5rem 1.5rem;
-	margin: auto 0;
-
+	color: #fff;
+	text-decoration: none;
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+	line-height: 2.1rem;
 }
 
-nav.main-nav ul li.active {
+nav.main-nav ul li:hover {
 	border-left: 1px solid #838383;
 	border-right: 1px solid #838383;
 	background-color: #ffffff;
 	background-image: linear-gradient(to top, #2e2e2e 0%, #4a4a4a 100%);
 }
 
-p.link a {
-	color: #fff;
-	text-decoration: none;
-	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-}
-p.link a:hover {
-	color: gray;
+section.main {
+	padding: 40px 0 0 0;
 }
 
-section.sidebar {
-	height: 600px;
+nav.sidebar-nav {
+	height: 440px;
 	width: 240px;
-	max-width: 28%;
-	float: left;
-}
-section.main-content {
-max-width: 67%;
-float: right;
+	display: inline-block;
 }
 
 nav.sidebar-nav ul {
@@ -91,27 +92,35 @@ nav.sidebar-nav ul {
 	border: none;
 }
 
-.sidebar-nav ul li.active {
+.sidebar-nav ul li a {
+	text-decoration: none;
+	color: #000;
+}
+
+.sidebar-nav ul li:hover {
 	background-color: #f9f9f9;
 	color: #2c2c2c;
 	padding: 1rem 6rem 1rem 2.4rem;
 	font-weight: bold;
 }
-section.main-content img {
-	float: right;
+
+.main-content {
+	width: 722px;
+	display: inline-block;
 }
 
 footer {
-	clear: both;
 	height: 2.5rem;
 	background-color: #e1e1e1;
 	background-color: #ffffff;
 	background-image: linear-gradient(to top, #e1e1e1 0%, #e1e1e1 100%);
 }
+
 nav.footer-nav ul li {
 	display: inline-block;
 	padding: 1rem 0;
 }
+
 li.copyright {
 	float: right;
 	padding: 1rem;
